# QuixotismEngine

./: CMakeLists.txt  CMakeSettings.json  README.md  TODO
common/: debug_out.hpp  quixotism_c.hpp
quiximg/: CMakeLists.txt
quiximg/src/: bit_ops.hpp  bmp_loader.cpp  bmp_loader.hpp  quiximg.cpp  quiximg.hpp
quixmesh/: CMakeLists.txt
quixmesh/src/: quixmesh.cpp  quixmesh.hpp
quixobj/: CMakeLists.txt
quixobj/src/: quixobj.cpp  quixobj.hpp
quixotism_engine/: CMakeLists.txt
quixotism_engine/data/shaders/: a.glsl  b.glsl  basic.frag  basic.vert  basic_line.frag  basic_line.vert  basic_v3_model_only.vert  font_basic.frag  font_basic.vert  model.frag  model.vert  no_transform.vert  screen_quad.frag  screen_quad.vert  skybox.vert  solid_color.frag  uniform_color.frag  xyz_axes.frag  xyz_axes.vert
quixotism_engine/data/shaders/cache/: Basic.csp
quixotism_engine/data/shaders/compute/: jfa.glsl  jfa_init.frag  jfa_init.vert  jfa_outline.frag
quixotism_engine/src/bitmap/: bitmap.cpp  bitmap.hpp
quixotism_engine/src/bitmap_processing/: bitmap.cpp  bitmap.hpp
quixotism_engine/src/common/: quixotism_c.hpp
quixotism_engine/src/containers/: bucket_array.hpp
quixotism_engine/src/core/: camera.hpp  constants.hpp  entity.hpp  entity_manager.hpp  font_manager.hpp  gui_interactive.cpp  gui_interactive.hpp  input.hpp  material.hpp  material_manager.hpp  platform_services.hpp  quixotism_engine.cpp  quixotism_engine.hpp  quixotism_input.hpp  quixotism_platform_services.hpp  quixotism_scene.cpp  quixotism_scene.hpp  static_mesh.hpp  static_mesh_manager.hpp  terminal.cpp  terminal.hpp  text_input.cpp  text_input.hpp  texture.hpp  texture_manager.hpp  transform.hpp
quixotism_engine/src/core/components/: camera.hpp  camera_component.hpp  component.cpp  component.hpp  component_manager.hpp  static_mesh.hpp  static_mesh_component.hpp  transform.cpp  transform.hpp
quixotism_engine/src/file_processing/obj_parser/: obj_parser.cpp  obj_parser.hpp
quixotism_engine/src/file_processing/png_parser/: png_parser.cpp  png_parser.hpp
quixotism_engine/src/fonts/: font.cpp  font.hpp
quixotism_engine/src/math/: basic.hpp  linalg.hpp  linear_alg.hpp  math.hpp  matrix.hpp  matrix_type.hpp  qmath.hpp  quaternion.cpp  quaternion.hpp  quixotism_math.hpp  trigonometry.hpp  vector.cpp  vector.hpp  vector_type.hpp
quixotism_engine/src/opengl/: bindable.hpp  gl_buffer.cpp  gl_buffer.hpp  gl_sampler.cpp  gl_sampler.hpp  gl_texture.cpp  gl_texture.hpp  index_buffer.cpp  index_buffer.hpp  opengl_renderer.cpp  opengl_renderer.hpp  opengl_util.hpp  shader_program.cpp  shader_program.hpp  texture2d.cpp  texture2d.hpp  vertex_array.cpp  vertex_array.hpp  vertex_buffer.cpp  vertex_buffer.hpp  vertex_buffer_layout.cpp  vertex_buffer_layout.hpp
quixotism_engine/src/renderer/: camera.cpp  camera.hpp  gl_buffer.cpp  gl_buffer.hpp  gl_buffer_manager.cpp  gl_buffer_manager.hpp  gl_call.hpp  gl_framebuffer.cpp  gl_framebuffer.hpp  gl_framebuffer_manager.hpp  gl_sampler.cpp  gl_sampler.hpp  gl_sampler_manager.hpp  gl_texture.cpp  gl_texture.hpp  gl_texture_manager.hpp  mesh_data.cpp  mesh_data.hpp  quixotism_renderer.cpp  quixotism_renderer.hpp  shader_manager.cpp  shader_manager.hpp  static_mesh.cpp  static_mesh.hpp  vertex_array.hpp  vertex_array_manager.cpp  vertex_array_manager.hpp  vertex_buffer_layout.cpp  vertex_buffer_layout.hpp
quixotism_engine/src/util/: bits.hpp  colors.hpp  concepts.hpp  dbg_print.hpp  enumerate.hpp  profiler.hpp  quixotism_c.hpp  quixotism_error.hpp  scope_guard.hpp  stb_image.hpp
quixotism_engine/src/win32/: win32_app_state.hpp  win32_io.hpp  win32_quixotism_engine.cpp  win32_quixotism_engine.hpp  win32_quixotism_io.cpp  win32_quixotism_io.hpp  win32_quixotism_opengl.cpp  win32_quixotism_opengl.hpp  win32_quixotism_time.cpp  win32_quixotism_time.hpp  win32_quixotism_window.cpp  win32_quixotism_window.hpp  win32_timer.hpp
